--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,10 +5,12 @@ on:
        branches:
         - main
         - feature/*
+        - feat/*
   pull_request:
     branches:
       - main
       - feature/*
+      - feat/*
 
 jobs:
   build:
